# RecBole

./: j_notes.md  main.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
dataset/ml-100k-wiki/: README_embeddings.txt  check_embedding_dim.py  create_emb_file.py  create_item_file.py  create_links.py  extract_movie_titles.py  links.tsv  ml-100k-wiki.emb  ml-100k-wiki.item  movie_titles.txt
docs/source/developer_guide/: customize_models.rst
recbole/model/: loss.py
recbole/model/sequential_recommender/: __init__.py  bert4rec.py  dessbert4rec.py
recbole/properties/dataset/: ml-100k-wiki copy.yaml  ml-100k-wiki.yaml
recbole/properties/model/: DESSBERT4Rec.yaml
run_example/: case_study_example.py  minimal_bert4rec.py  minimal_dessbert4rec.py  session_based_rec_example.py
