[project]
name = "recbole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
     "torch>=1.10.0",
    "numpy==1.23.5",
    "scipy>=1.6.0",
    "pandas>=1.3.0",
    "tqdm>=4.48.2",
    "colorlog==4.7.2",
    "colorama==0.4.4",
    "scikit_learn>=0.23.2",
    "pyyaml>=5.1.0",
    "tensorboard>=2.5.0",
    "thop>=0.1.1.post2207130030",
    "tabulate>=0.8.10",
    "plotly>=4.0.0",
    "texttable>=0.9.0",
    "psutil>=5.9.0",
    "ray>=1.13.0, <=2.6.3"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["recbole"]
# If your package is in a subdirectory, specify it like this:
# package-dir = {"" = "src"}
# packages = ["recbole"]
